Prevent fields from squishing buttons

--- a/packages/block-library/field/style.scss
+++ b/packages/block-library/field/style.scss
@@ -2,5 +2,5 @@
 .wp-block-omniform-field {
 
 	box-sizing: border-box;
-	width: 100%;
+	flex-grow: 1;
 }
